force-app/main/default/objects/FSC_AAF_Table__mdt/FSC_AAF_Table__mdt.object-meta.xml
<CustomObject>
    <description>FSC</description>
    <label>FSC AAF Table</label>
    <pluralLabel>FSC AAF Table</pluralLabel>
</CustomObject>