force-app/main/default/objects/FSC_AAF_Table__mdt/fields/Fixed_Number__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Number__c</fullName>
    <defaultValue>1000000</defaultValue>
    <description>FSC</description>
    <label>Fixed Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>