force-app/main/default/objects/FSC_AAF_Table__mdt/fields/Maximum_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Turnover__c</fullName>
    <description>FSC</description>
    <label>Maximum Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>