force-app/main/default/objects/FSC_AAF_Table__mdt/fields/Processor_Variable_USD__c.field-meta.xml
<CustomField>
    <fullName>Processor_Variable_USD__c</fullName>
    <description>FSC</description>
    <label>Processor  Variable (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>