force-app/main/default/objects/FSC_AAF_Table__mdt/fields/Trader_Base_USD__c.field-meta.xml
<CustomField>
    <fullName>Trader_Base_USD__c</fullName>
    <description>FSC</description>
    <label>Trader Base  (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>